tests/snapshots/test_examples__fail__safety1_init.fly.z3.houdini.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: invariant is not inductive
   ┌─ examples/fail/safety1_init.fly:10:1
   │
10 │ assert always !p & !q
   │ ^^^^^^^^^^^^^^^^^^^^^
   │
   = smt solver returned unknown: assertion not in fixed point


